--- a/style.css
+++ b/style.css
@@ -1,55 +1,73 @@
 html {
-	background-color: #ffffff;
+	background-color: #222;
 	font-family: arial, sans-serif;
 	font-size: 16px;
 }
 
-body,html {
-	background: #000;
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-	text-align: center;
-	align: center;
-}
-
-.calculator {
-	align: center;
-	width: 500px;
-	height: 500px;
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(4, 1fr);
-	grid-column-gap: 1px;
-	grid-row-gap: 1px;
-	background: #fff;
-	border: 8px solid;
-	border-color: #add8e6;
-	border-radius: 4px;
-	margin: 10px auto;
-	padding: 1px;
-}
-
-a {
-	color: #444;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
+button {
+	font-family: arial, sans-serif;
+	font-size: 24px;
 }
 
 button:hover {
-	background: #acd;
+	opacity: .8;
+}
+
+#calculator {
+	width: 400px;
+	height: 500px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(6, 1fr);
+	grid-column-gap: 4px;
+	grid-row-gap: 4px;
+	border: 8px solid;
+	border-color: #999;
+	border-radius: 4px;
+	margin: 4em auto;
+	padding: 4px;
+}
+
+#calcDisplay {
+	background-color: #eee;
+	grid-column: span 4;
+	padding: 24px;
+	text-align: right;
+	font-family: courier, monospace;
+	font-size: 32px;
+}
+
+.funcBtn {
+	background-color: #aaa;
+}
+
+.numBtn {
+	background-color: #eee;
+}
+
+#eqBtn {
+	grid-column: span 2;
 }
 
 footer {
+	font-family: verdana, sans-serif;
+	font-size: 14px;
 	position: fixed;
 	bottom: 0;
 	background: #f2f2f2;
 	width: 100%;
 	border-top: 1px solid #e4e4e4;
-	padding: 14px;
-	margin: 0px 0px 0px 0px;
+	padding: 0.6em;
+	margin: 0px;
+	text-align: center;
+}
+
+footer a {
+	color: #444;
+	text-decoration: none;
+}
+
+footer a:hover {
+	text-decoration: underline;
 }
 
